project(TKFeat)

if (WIN32)
  list( APPEND TKFeat_PRECOMPILED_DEFS "-D__LocOpe_DLL" )
  list( APPEND TKFeat_PRECOMPILED_DEFS "-D__BRepFeat_DLL" )
  string( REGEX REPLACE ";" " " TKFeat_PRECOMPILED_DEFS "${TKFeat_PRECOMPILED_DEFS}")
endif()

  list( APPEND TKFeat_COMPILER_DIRECTORIES "${WOK_LIB_PATH}" )
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}/inc")
    list( APPEND TKFeat_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/inc" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/inc")
    list( APPEND TKFeat_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/inc" )
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
    IF(EXISTS "${BUILD_PATCH_DIR}/drv/LocOpe")
      list( APPEND TKFeat_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/LocOpe" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/LocOpe")
      list( APPEND TKFeat_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/LocOpe" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/BRepFeat")
      list( APPEND TKFeat_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/BRepFeat" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/BRepFeat")
      list( APPEND TKFeat_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/BRepFeat" )
    ENDIF()

  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/LocOpe")
    list( APPEND TKFeat_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/LocOpe" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/LocOpe")
    list( APPEND TKFeat_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/LocOpe" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/BRepFeat")
    list( APPEND TKFeat_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/BRepFeat" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/BRepFeat")
    list( APPEND TKFeat_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/BRepFeat" )
  ENDIF()

IF (WIN32)
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
  ENDIF()

ELSE()
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
  ENDIF()

ENDIF()

  list( APPEND TKFeat_USED_LIBS TKBRep )
  list( APPEND TKFeat_USED_LIBS TKTopAlgo )
  list( APPEND TKFeat_USED_LIBS TKGeomAlgo )
  list( APPEND TKFeat_USED_LIBS TKMath )
  list( APPEND TKFeat_USED_LIBS TKernel )
  list( APPEND TKFeat_USED_LIBS TKGeomBase )
  list( APPEND TKFeat_USED_LIBS TKPrim )
  list( APPEND TKFeat_USED_LIBS TKG2d )
  list( APPEND TKFeat_USED_LIBS TKBO )
  list( APPEND TKFeat_USED_LIBS TKG3d )
  list( APPEND TKFeat_USED_LIBS TKBool )

if (WIN32)
elseif(APPLE)
elseif(ANDROID)
else()
endif()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_DataMapIteratorOfDataMapOfShapePnt_0.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_DataMapIteratorOfDataMapOfShapePnt_0.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_DataMapIteratorOfDataMapOfShapePnt_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_DataMapIteratorOfDataMapOfShapePnt_0.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_DataMapIteratorOfDataMapOfShapePnt_0.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_DataMapIteratorOfDataMapOfShapePnt_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_DataMapNodeOfDataMapOfShapePnt_0.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_DataMapNodeOfDataMapOfShapePnt_0.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_DataMapNodeOfDataMapOfShapePnt_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_DataMapNodeOfDataMapOfShapePnt_0.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_DataMapNodeOfDataMapOfShapePnt_0.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_DataMapNodeOfDataMapOfShapePnt_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_DataMapOfShapePnt_0.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_DataMapOfShapePnt_0.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_DataMapOfShapePnt_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_DataMapOfShapePnt_0.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_DataMapOfShapePnt_0.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_DataMapOfShapePnt_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_SequenceNodeOfSequenceOfCirc_0.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_SequenceNodeOfSequenceOfCirc_0.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_SequenceNodeOfSequenceOfCirc_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_SequenceNodeOfSequenceOfCirc_0.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_SequenceNodeOfSequenceOfCirc_0.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_SequenceNodeOfSequenceOfCirc_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_SequenceNodeOfSequenceOfLin_0.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_SequenceNodeOfSequenceOfLin_0.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_SequenceNodeOfSequenceOfLin_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_SequenceNodeOfSequenceOfLin_0.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_SequenceNodeOfSequenceOfLin_0.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_SequenceNodeOfSequenceOfLin_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_SequenceNodeOfSequenceOfPntFace_0.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_SequenceNodeOfSequenceOfPntFace_0.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_SequenceNodeOfSequenceOfPntFace_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_SequenceNodeOfSequenceOfPntFace_0.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_SequenceNodeOfSequenceOfPntFace_0.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_SequenceNodeOfSequenceOfPntFace_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_SequenceOfCirc_0.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_SequenceOfCirc_0.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_SequenceOfCirc_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_SequenceOfCirc_0.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_SequenceOfCirc_0.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_SequenceOfCirc_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_SequenceOfLin_0.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_SequenceOfLin_0.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_SequenceOfLin_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_SequenceOfLin_0.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_SequenceOfLin_0.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_SequenceOfLin_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_SequenceOfPntFace_0.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_SequenceOfPntFace_0.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//drv/LocOpe/LocOpe_SequenceOfPntFace_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_SequenceOfPntFace_0.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_SequenceOfPntFace_0.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//drv/LocOpe/LocOpe_SequenceOfPntFace_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_BuildShape.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_BuildShape.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_BuildShape.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_BuildShape.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_BuildShape.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_BuildShape.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_BuildWires.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_BuildWires.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_BuildWires.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_BuildWires.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_BuildWires.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_BuildWires.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_CSIntersector.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_CSIntersector.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_CSIntersector.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_CSIntersector.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_CSIntersector.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_CSIntersector.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_CurveShapeIntersector.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_CurveShapeIntersector.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_CurveShapeIntersector.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_CurveShapeIntersector.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_CurveShapeIntersector.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_CurveShapeIntersector.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_DPrism.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_DPrism.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_DPrism.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_DPrism.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_DPrism.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_DPrism.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_FindEdges.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_FindEdges.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_FindEdges.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_FindEdges.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_FindEdges.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_FindEdges.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_FindEdgesInFace.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_FindEdgesInFace.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_FindEdgesInFace.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_FindEdgesInFace.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_FindEdgesInFace.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_FindEdgesInFace.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_GeneratedShape.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_GeneratedShape.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_GeneratedShape.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_GeneratedShape.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_GeneratedShape.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_GeneratedShape.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_Generator.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_Generator.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_Generator.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_Generator.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_Generator.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_Generator.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_GluedShape.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_GluedShape.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_GluedShape.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_GluedShape.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_GluedShape.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_GluedShape.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_Gluer.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_Gluer.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_Gluer.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_Gluer.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_Gluer.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_Gluer.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_HBuilder.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_HBuilder.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_HBuilder.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_HBuilder.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_HBuilder.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_HBuilder.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_LinearForm.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_LinearForm.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_LinearForm.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_LinearForm.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_LinearForm.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_LinearForm.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_Pipe.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_Pipe.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_Pipe.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_Pipe.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_Pipe.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_Pipe.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_PntFace.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_PntFace.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_PntFace.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_PntFace.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_PntFace.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_PntFace.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_Prism.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_Prism.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_Prism.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_Prism.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_Prism.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_Prism.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_Revol.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_Revol.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_Revol.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_Revol.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_Revol.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_Revol.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_RevolutionForm.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_RevolutionForm.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_RevolutionForm.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_RevolutionForm.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_RevolutionForm.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_RevolutionForm.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_SplitDrafts.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_SplitDrafts.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_SplitDrafts.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_SplitDrafts.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_SplitDrafts.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_SplitDrafts.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_SplitShape.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_SplitShape.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_SplitShape.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_SplitShape.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_SplitShape.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_SplitShape.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_Spliter.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_Spliter.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_Spliter.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_Spliter.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_Spliter.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_Spliter.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_WiresOnShape.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_WiresOnShape.cxx" )
    SOURCE_GROUP (LocOpe FILES "${BUILD_PATCH_DIR}//src/LocOpe/LocOpe_WiresOnShape.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_WiresOnShape.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_WiresOnShape.cxx" )
      SOURCE_GROUP (LocOpe FILES "${CMAKE_SOURCE_DIR}//src/LocOpe/LocOpe_WiresOnShape.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat.cxx" )
    SOURCE_GROUP (BRepFeat FILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat.cxx" )
      SOURCE_GROUP (BRepFeat FILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_Builder.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_Builder.cxx" )
    SOURCE_GROUP (BRepFeat FILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_Builder.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_Builder.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_Builder.cxx" )
      SOURCE_GROUP (BRepFeat FILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_Builder.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_Form.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_Form.cxx" )
    SOURCE_GROUP (BRepFeat FILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_Form.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_Form.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_Form.cxx" )
      SOURCE_GROUP (BRepFeat FILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_Form.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_Gluer.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_Gluer.cxx" )
    SOURCE_GROUP (BRepFeat FILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_Gluer.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_Gluer.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_Gluer.cxx" )
      SOURCE_GROUP (BRepFeat FILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_Gluer.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_MakeCylindricalHole.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_MakeCylindricalHole.cxx" )
    SOURCE_GROUP (BRepFeat FILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_MakeCylindricalHole.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_MakeCylindricalHole.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_MakeCylindricalHole.cxx" )
      SOURCE_GROUP (BRepFeat FILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_MakeCylindricalHole.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_MakeDPrism.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_MakeDPrism.cxx" )
    SOURCE_GROUP (BRepFeat FILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_MakeDPrism.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_MakeDPrism.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_MakeDPrism.cxx" )
      SOURCE_GROUP (BRepFeat FILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_MakeDPrism.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_MakeLinearForm.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_MakeLinearForm.cxx" )
    SOURCE_GROUP (BRepFeat FILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_MakeLinearForm.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_MakeLinearForm.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_MakeLinearForm.cxx" )
      SOURCE_GROUP (BRepFeat FILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_MakeLinearForm.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_MakePipe.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_MakePipe.cxx" )
    SOURCE_GROUP (BRepFeat FILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_MakePipe.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_MakePipe.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_MakePipe.cxx" )
      SOURCE_GROUP (BRepFeat FILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_MakePipe.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_MakePrism.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_MakePrism.cxx" )
    SOURCE_GROUP (BRepFeat FILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_MakePrism.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_MakePrism.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_MakePrism.cxx" )
      SOURCE_GROUP (BRepFeat FILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_MakePrism.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_MakeRevol.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_MakeRevol.cxx" )
    SOURCE_GROUP (BRepFeat FILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_MakeRevol.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_MakeRevol.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_MakeRevol.cxx" )
      SOURCE_GROUP (BRepFeat FILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_MakeRevol.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_MakeRevolutionForm.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_MakeRevolutionForm.cxx" )
    SOURCE_GROUP (BRepFeat FILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_MakeRevolutionForm.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_MakeRevolutionForm.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_MakeRevolutionForm.cxx" )
      SOURCE_GROUP (BRepFeat FILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_MakeRevolutionForm.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_RibSlot.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_RibSlot.cxx" )
    SOURCE_GROUP (BRepFeat FILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_RibSlot.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_RibSlot.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_RibSlot.cxx" )
      SOURCE_GROUP (BRepFeat FILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_RibSlot.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_SplitShape.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_SplitShape.cxx" )
    SOURCE_GROUP (BRepFeat FILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_SplitShape.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_SplitShape.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_SplitShape.cxx" )
      SOURCE_GROUP (BRepFeat FILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_SplitShape.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_trace.cxx")
    list( APPEND TKFeat_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_trace.cxx" )
    SOURCE_GROUP (BRepFeat FILES "${BUILD_PATCH_DIR}//src/BRepFeat/BRepFeat_trace.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_trace.cxx")
      list( APPEND TKFeat_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_trace.cxx" )
      SOURCE_GROUP (BRepFeat FILES "${CMAKE_SOURCE_DIR}//src/BRepFeat/BRepFeat_trace.cxx")
    ENDIF()
  ENDIF()


IF (WIN32)
ELSE()

  IF (APPLE)

  ENDIF()

ENDIF()

if ("${USED_TOOLKITS}" STREQUAL "" OR DEFINED TurnONtheTKFeat)
 add_library( TKFeat SHARED ${TKFeat_USED_SRCFILES} )

 set_property(TARGET TKFeat PROPERTY FOLDER ModelingAlgorithms)

 install( TARGETS TKFeat
                                 RUNTIME DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/bin${BUILD_POSTFIX}"
                                 ARCHIVE DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/lib${BUILD_POSTFIX}"
                                 LIBRARY DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/lib${BUILD_POSTFIX}")

 if (MSVC)
  install( FILES  ${CMAKE_BINARY_DIR}/out/bind/Debug/TKFeat.pdb CONFIGURATIONS Debug
                                  DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/bin${BUILD_POSTFIX}")
 endif()


 set_target_properties( TKFeat PROPERTIES COMPILE_FLAGS "${TKFeat_PRECOMPILED_DEFS}" )
 include_directories( ${TKFeat_COMPILER_DIRECTORIES} )
 target_link_libraries( TKFeat ${TKFeat_USED_LIBS} )
endif()
